@@ -2,7 +2,7 @@
 
 A UCI-compliant chess engine by TheTilted096 featuring NNUE evaluation and modern search techniques.
 
-**Current Version:** 1.0.2.0 (NNUE Release - November 2025)
+**Current Version:** 1.0.3.0 (NNUE Release - November 2025)
 
 ## Features
 
@@ -12,6 +12,7 @@ A UCI-compliant chess engine by TheTilted096 featuring NNUE evaluation and moder
 ### Search
 - **Principal Variation Search (PVS)** with aspiration windows
 - **Late Move Reductions (LMR)**
+- **Internal Iterative Reductions (IIR)**
 - **Null Move Pruning**
 - **Reverse Futility Pruning**
 - **Quiescence Search** with SEE pruning
